Grease Pencil layer visibility/locking not synchronized from Dope Sheet to Properties #87640

Closed
opened 2021-04-19 20:32:26 +02:00 by Matthew Hinson · 6 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.35.02 27.20.1034.6

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: (unknown)

Short description of error
If you change the visibility or lock state of a Grease Pencil layer in the Dope Sheet editor, that change is not immediately visible in the Properties editor. You have to move the mouse over the Layers list in the Properties editor to see it.

In addition, the eye and lock icons in the Dope Sheet editor don't have the same context menu items as those in the Properties editor ("Add Driver" is missing, for example). Other icons, like Mask Layer, do have consistent context menus.

Exact steps for others to reproduce the error

  • Launch Blender and switch to the Animation workspace.
  • Add a "Monkey" Grease Pencil object.
  • In the Properties editor, switch to the Object Data tab so you can see the object's layers.
  • In the Dope Sheet editor, switch to the Grease Pencil mode.
  • Click the eye icon next to a layer in the Dope Sheet editor. Notice that the corresponding eye icon in the Properties editor doesn't change.
  • Click the lock icon in the Dope Sheet editor. Again, nothing changes in the Properties editor.
  • Hover the mouse over the Layers list in the Properties editor. Only now do the icons get updated.

Note that the other Dope Sheet icons, which can be made visible through View -> Show Sliders, do properly synchronize to the Properties editor. Also, synchronization from the Properties editor to the Dope Sheet editor works properly for all icons.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.35.02 27.20.1034.6 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: (unknown) **Short description of error** If you change the visibility or lock state of a Grease Pencil layer in the Dope Sheet editor, that change is not immediately visible in the Properties editor. You have to move the mouse over the Layers list in the Properties editor to see it. In addition, the eye and lock icons in the Dope Sheet editor don't have the same context menu items as those in the Properties editor ("Add Driver" is missing, for example). Other icons, like Mask Layer, do have consistent context menus. **Exact steps for others to reproduce the error** - Launch Blender and switch to the Animation workspace. - Add a "Monkey" Grease Pencil object. - In the Properties editor, switch to the Object Data tab so you can see the object's layers. - In the Dope Sheet editor, switch to the Grease Pencil mode. - Click the eye icon next to a layer in the Dope Sheet editor. Notice that the corresponding eye icon in the Properties editor doesn't change. - Click the lock icon in the Dope Sheet editor. Again, nothing changes in the Properties editor. - Hover the mouse over the Layers list in the Properties editor. Only now do the icons get updated. Note that the other Dope Sheet icons, which can be made visible through View -> Show Sliders, do properly synchronize to the Properties editor. Also, synchronization from the Properties editor to the Dope Sheet editor works properly for all icons.
Author
Member

Added subscriber: @Matthew-Hinson

Added subscriber: @Matthew-Hinson
Philipp Oeser self-assigned this 2021-04-20 11:14:27 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 26ab90e49b

This issue was referenced by 26ab90e49bb49e5ff86d19bd19934293e6891d60
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author
Member

Thank you for the quick turnaround. It looks like the commit doesn't include a fix for the inconsistent context menus (which, admittedly, weren't really brought forward in this ticket); should I create a separate ticket for those?

Thank you for the quick turnaround. It looks like the commit doesn't include a fix for the inconsistent context menus (which, admittedly, weren't really brought forward in this ticket); should I create a separate ticket for those?
Member

In #87640#1149859, @Matthew-Hinson wrote:
Thank you for the quick turnaround. It looks like the commit doesn't include a fix for the inconsistent context menus (which, admittedly, weren't really brought forward in this ticket); should I create a separate ticket for those?

Yes, please do so, you can subscribe me there if you like.

> In #87640#1149859, @Matthew-Hinson wrote: > Thank you for the quick turnaround. It looks like the commit doesn't include a fix for the inconsistent context menus (which, admittedly, weren't really brought forward in this ticket); should I create a separate ticket for those? Yes, please do so, you can subscribe me there if you like.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87640
No description provided.